deploy try again

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactprotfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://4jonathanfoster.github.io/reactportfolio",
+  "homepage": "https://4jonathanfoster.github.io/reactprotfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
