--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "urix": "^0.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -18,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +42,4 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
-  
 }
